added section of feature speakers in html

--- a/main.html
+++ b/main.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Capstone Project using HTML and CSS</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
 
@@ -39,7 +41,132 @@
         </section>
 
         <section>
-            
+
+            <h2>Main Program</h2>
+
+            <div class="card">
+                <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
+                <div class="card-body">
+                    <h4 class="card-title"></h4>
+                    <p class="card-text"></p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
+                <div class="card-body">
+                    <h4 class="card-title"></h4>
+                    <p class="card-text"></p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
+                <div class="card-body">
+                    <h4 class="card-title"></h4>
+                    <p class="card-text"></p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
+                <div class="card-body">
+                    <h4 class="card-title"></h4>
+                    <p class="card-text"></p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
+                <div class="card-body">
+                    <h4 class="card-title"></h4>
+                    <p class="card-text"></p>
+                </div>
+            </div>
+
+            <h3>SEE THE WHOLE Program</h3>
+        </section>
+
+        <section>
+
+            <h2>Feature Speakers</h2>
+            <div></div>
+
+            <article class="media ">
+                <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+                <div class="media-body">
+                  <a class="" href="#">Yochai Benkler</a>
+                  <p>Pellentesque faucibus sem ac fermentum tristique</p>
+                  <div></div>
+                  <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
+                </div>
+            </article>
+
+            <article class="media ">
+                <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+                <div class="media-body">
+                  <a class="" href="#">Yochai Benkler</a>
+                  <p>Pellentesque faucibus sem ac fermentum tristique</p>
+                  <div></div>
+                  <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
+                </div>
+            </article>
+
+            <article class="media ">
+                <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+                <div class="media-body">
+                  <a class="" href="#">Yochai Benkler</a>
+                  <p>Pellentesque faucibus sem ac fermentum tristique</p>
+                  <div></div>
+                  <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
+                </div>
+            </article>
+
+            <article class="media ">
+                <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+                <div class="media-body">
+                  <a class="" href="#">Yochai Benkler</a>
+                  <p>Pellentesque faucibus sem ac fermentum tristique</p>
+                  <div></div>
+                  <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
+                </div>
+            </article>
+
+            <article class="media ">
+                <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+                <div class="media-body">
+                  <a class="" href="#">Yochai Benkler</a>
+                  <p>Pellentesque faucibus sem ac fermentum tristique</p>
+                  <div></div>
+                  <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
+                </div>
+            </article>
+
+            <article class="media ">
+                <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+                <div class="media-body">
+                  <a class="" href="#">Yochai Benkler</a>
+                  <p>Pellentesque faucibus sem ac fermentum tristique</p>
+                  <div></div>
+                  <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
+                </div>
+            </article>
+
+            <article class="media ">
+                <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+                <div class="media-body">
+                  <a class="" href="#">Yochai Benkler</a>
+                  <p>Pellentesque faucibus sem ac fermentum tristique</p>
+                  <div></div>
+                  <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
+                </div>
+            </article>
+
+            <article class="media ">
+                <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+                <div class="media-body">
+                  <a class="" href="#">Yochai Benkler</a>
+                  <p>Pellentesque faucibus sem ac fermentum tristique</p>
+                  <div></div>
+                  <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
+                </div>
+            </article>
         </section>
 
     </main>
