added partners section

--- a/main.html
+++ b/main.html
@@ -98,8 +98,8 @@
                 </div>
             </article>
 
-            <article class="media ">
-                <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+            <article class="media">
+                <img src="images/httpls://unsplash.it/50/50" alt="speaker-2">
                 <div class="media-body">
                   <a class="" href="#">Yochai Benkler</a>
                   <p>Pellentesque faucibus sem ac fermentum tristique</p>
@@ -108,8 +108,8 @@
                 </div>
             </article>
 
-            <article class="media ">
-                <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+            <article class="media">
+                <img src="images/httpls://unsplash.it/50/50" alt="speaker-3">
                 <div class="media-body">
                   <a class="" href="#">Yochai Benkler</a>
                   <p>Pellentesque faucibus sem ac fermentum tristique</p>
@@ -118,8 +118,8 @@
                 </div>
             </article>
 
-            <article class="media ">
-                <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+            <article class="media">
+                <img src="images/httpls://unsplash.it/50/50" alt="speaker-4">
                 <div class="media-body">
                   <a class="" href="#">Yochai Benkler</a>
                   <p>Pellentesque faucibus sem ac fermentum tristique</p>
@@ -128,8 +128,8 @@
                 </div>
             </article>
 
-            <article class="media ">
-                <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+            <article class="media">
+                <img src="images/httpls://unsplash.it/50/50" alt="speaker-5">
                 <div class="media-body">
                   <a class="" href="#">Yochai Benkler</a>
                   <p>Pellentesque faucibus sem ac fermentum tristique</p>
@@ -138,8 +138,8 @@
                 </div>
             </article>
 
-            <article class="media ">
-                <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+            <article class="media">
+                <img src="images/httpls://unsplash.it/50/50" alt="speaker-6">
                 <div class="media-body">
                   <a class="" href="#">Yochai Benkler</a>
                   <p>Pellentesque faucibus sem ac fermentum tristique</p>
@@ -148,8 +148,8 @@
                 </div>
             </article>
 
-            <article class="media ">
-                <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+            <article class="media">
+                <img src="images/httpls://unsplash.it/50/50" alt="speaker-7">
                 <div class="media-body">
                   <a class="" href="#">Yochai Benkler</a>
                   <p>Pellentesque faucibus sem ac fermentum tristique</p>
@@ -158,8 +158,8 @@
                 </div>
             </article>
 
-            <article class="media ">
-                <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+            <article class="media">
+                <img src="images/httpls://unsplash.it/50/50" alt="speaker-8">
                 <div class="media-body">
                   <a class="" href="#">Yochai Benkler</a>
                   <p>Pellentesque faucibus sem ac fermentum tristique</p>
@@ -167,6 +167,24 @@
                   <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
                 </div>
             </article>
+        </section>
+
+        <section>
+
+            <div>
+                <h3>Partner</h3>
+                <div></div>
+            </div>
+
+            <div>
+                <img src="images/mozilla-logo.png" alt="mozilla-logo">
+                <img src="images/dji-logo.png" alt="dji-logo">
+                <img src="images/google-logo.jpg" alt="google-logo">
+                <img src="images/naver-logo.jpg" alt="naver-logo">
+                <img src="images/toyota-logo.jpg" alt="toyota-logo">
+            </div>
+
+
         </section>
 
     </main>
