added style and color to first navbar

--- a/main.html
+++ b/main.html
@@ -1,13 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Capstone Project using HTML and CSS</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Capstone Project using HTML and CSS</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
+
+  <header>
+    <nav class="navbar-1 navbar d-md-flex d-sm-flex">
+      <a class="navbar-item" href="#"><i class="fab fa-facebook-square"></i></a>
+      <a class="navbar-item" href="#"><i class="fab fa-twitter-square"></i></a>
+      <a class="navbar-item" href="#">English</a>
+      <a class="navbar-item" href="#">My page</a>
+      <a class="navbar-item" href="#">Logout</a>
+    </nav>
+
+    <nav class="navbar-2 navbar navbar-expand-sm">
+      <img class="navbar-brand event-logo" src="images/logo-event.png" alt="logo-event">
+        <ul class="navbar-2-list">
+          <li><a class="navbar-item list-style-none" href="#">About</a></li>
+          <li><a class="navbar-item" href="#">Program</a></li>
+          <li><a class="navbar-item" href="#">Join</a></li>
+          <li><a class="navbar-item" href="#">Sponsor</a></li>
+          <li><a class="navbar-item" href="#">News</a></li>
+          <li><a class="navbar-item" href="#">CC Campaign</a></li>
+        </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section class="title-section">
+      <h1>"Hello! Sharing World"</h1>
+        <span>Creative Solutions for Engineers 2021</span>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper lectus a laoreet dictum. Maecenas molestie dolor arcu, quis ultricies mauris malesuada eget. Ut rhoncus efficitur arcu, ut molestie lacus cursus a.</p>
+        <h2>2021.10.18(WED) ~ 21(FRI)</h2>
+        <p>@ National Musem of Korea, Art Center nabi and more</p>
+    </section>
+
+    <section class="main-section">
+
+      <h2>Main Program</h2>
+
+      <div class="card">
+        <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
+        <div class="card-body">
+          <h4 class="card-title"></h4>
+          <p class="card-text"></p>
+        </div>
+      </div>
+
+      <div class="card">
+        <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
+        <div class="card-body">
+          <h4 class="card-title"></h4>
+          <p class="card-text"></p>
+        </div>
+      </div>
+
+      <div class="card">
+        <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
+        <div class="card-body">
+          <h4 class="card-title"></h4>
+          <p class="card-text"></p>
+        </div>
+      </div>
+
+      <div class="card">
+        <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
+        <div class="card-body">
+          <h4 class="card-title"></h4>
+          <p class="card-text"></p>
+        </div>
+      </div>
+
+      <div class="card">
+        <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
+        <div class="card-body">
+          <h4 class="card-title"></h4>
+          <p class="card-text"></p>
+        </div>
+      </div>
+
+      <div class="card">
+        <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
+        <div class="card-body">
+          <h4 class="card-title"></h4>
+          <p class="card-text"></p>
+        </div>
+      </div>
+
+      <div class="card">
+        <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
+        <div class="card-body">
+          <h4 class="card-title"></h4>
+          <p class="card-text"></p>
+        </div>
+      </div>
+
+      <div class="card">
+        <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
+        <div class="card-body">
+          <h4 class="card-title"></h4>
+          <p class="card-text"></p>
+        </div>
+      </div>
+      
+      <h3>SEE THE WHOLE Program</h3>
+    </section>
+
+    <section class="feature-section">
+
+      <h2>Feature Speakers</h2>
+      <div></div>
+
+      <article class="media ">
+        <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+        <div class="media-body">
+          <a class="" href="#">Yochai Benkler</a>
+          <p>Pellentesque faucibus sem ac fermentum tristique</p>
+          <div></div>
+          <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
+        </div>
+      </article>
+
+      <article class="media ">
+        <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+        <div class="media-body">
+          <a class="" href="#">Yochai Benkler</a>
+          <p>Pellentesque faucibus sem ac fermentum tristique</p>
+          <div></div>
+          <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
+        </div>
+      </article>
+
+      <article class="media ">
+        <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+        <div class="media-body">
+          <a class="" href="#">Yochai Benkler</a>
+          <p>Pellentesque faucibus sem ac fermentum tristique</p>
+          <div></div>
+          <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
+        </div>
+      </article>
+
+      <article class="media ">
+        <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+        <div class="media-body">
+          <a class="" href="#">Yochai Benkler</a>
+          <p>Pellentesque faucibus sem ac fermentum tristique</p>
+          <div></div>
+          <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
+        </div>
+      </article>
+
+      <article class="media ">
+        <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+        <div class="media-body">
+          <a class="" href="#">Yochai Benkler</a>
+          <p>Pellentesque faucibus sem ac fermentum tristique</p>
+          <div></div>
+          <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
+        </div>
+      </article>
+
+      <article class="media ">
+        <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+        <div class="media-body">
+          <a class="" href="#">Yochai Benkler</a>
+          <p>Pellentesque faucibus sem ac fermentum tristique</p>
+          <div></div>
+          <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
+        </div>
+      </article>
+
+        
+    </section>
+
+    <section class="partner-section">
+
+      <div>
+        <h3>Partner</h3>
+        <div></div>
+      </div>
+
+      <div>
+        <img src="images/mozilla-logo.png" alt="mozilla-logo">
+        <img src="images/dji-logo.png" alt="dji-logo">
+        <img src="images/google-logo.jpg" alt="google-logo">
+        <img src="images/naver-logo.jpg" alt="naver-logo">
+        <img src="images/toyota-logo.jpg" alt="toyota-logo">
+      </div>
+
+    </section>
+
+  </main>
+
+  <footer>
+    <img src="images/logo-event.png" alt="event-logo">
+    <div>
+      <p>2021 Creative Common Korea. Rights Reserved</p>
+      <p>Fusce venenatis sit amet lorem non condimentum. Aliquam erat volutpat. Maecenas vehicula, eros sed mollis varius, nisl ex pellentesque tortor, eu sodales turpis neque in quam.</p>
+    </div>
+  </footer>
   
 </body>
 </html>
