added style to navbar and added bars icon on mobile version

--- a/main.html
+++ b/main.html
@@ -10,25 +10,28 @@
 </head>
 <body>
 
-  <header>
-    <nav class="navbar-1 navbar d-md-flex d-sm-flex">
-      <a class="navbar-item" href="#"><i class="fab fa-facebook-square"></i></a>
-      <a class="navbar-item" href="#"><i class="fab fa-twitter-square"></i></a>
-      <a class="navbar-item" href="#">English</a>
-      <a class="navbar-item" href="#">My page</a>
-      <a class="navbar-item" href="#">Logout</a>
+  <header class="mx-auto">
+    <a class="medium-hide pl-4 bars-icon" href="#"><i class="fas fa-bars"></i></a>
+    <nav class="navbar-1 d-flex d-md-flex d-lg-flex justify-content-end justify-content-lg-end bg-gray-medium">
+      <a class="pl-2 pr-2 c-white" href="#">
+        <i class="fab fa-facebook-square"></i>
+      </a>
+      <a class="pl-2 pr-2 c-white" href="#">
+        <i class="fab fa-twitter-square"></i>
+      </a>
+      <a class="pl-2 pr-2 c-white font-f-1" href="#">English</a>
+      <a class="pl-2 pr-2 c-white font-f-1 nav-item-1" href="#">My page</a>
+      <a class="pl-2 pr-2 c-white" href="#">Logout</a>
     </nav>
 
-    <nav class="navbar-2 navbar navbar-expand-sm">
-      <img class="navbar-brand event-logo" src="images/logo-event.png" alt="logo-event">
-        <ul class="navbar-2-list">
-          <li><a class="navbar-item list-style-none" href="#">About</a></li>
-          <li><a class="navbar-item" href="#">Program</a></li>
-          <li><a class="navbar-item" href="#">Join</a></li>
-          <li><a class="navbar-item" href="#">Sponsor</a></li>
-          <li><a class="navbar-item" href="#">News</a></li>
-          <li><a class="navbar-item" href="#">CC Campaign</a></li>
-        </ul>
+    <nav class="navbar-2 d-md-flex d-lg-flex justify-content-md-around justify-content-lg-around  align-items-center">
+      <img class="navbar-item event-logo" src="images/logo-event.png" alt="logo-event">
+      <a class="navbar-item" href="#">About</a>
+      <a class="navbar-item" href="#">Program</a>
+      <a class="navbar-item" href="#">Join</a>
+      <a class="navbar-item" href="#">Sponsor</a>
+      <a class="navbar-item" href="#">News</a>
+      <a class="navbar-item c-orange" href="#">CC Campaign</a>
     </nav>
   </header>
 
