addeds style to title section on main page mobile version

--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 <body>
 
   <header class="mx-auto">
-    <a class="medium-hide pl-4 bars-icon" href="#"><i class="fas fa-bars"></i></a>
+    <a class="medium-hide pl-4 bars-icon c-black" href="#"><i class="fas fa-bars"></i></a>
     <nav class="navbar-1 d-flex d-md-flex d-lg-flex justify-content-end justify-content-lg-end bg-gray-medium">
       <a class="pl-2 pr-2 c-white" href="#">
         <i class="fab fa-facebook-square"></i>
@@ -35,12 +35,13 @@
     </nav>
   </header>
 
-  <main>
+  <main class="container">
     <section class="title-section">
-      <h1>"Hello! Sharing World"</h1>
-        <span>Creative Solutions for Engineers 2021</span>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper lectus a laoreet dictum. Maecenas molestie dolor arcu, quis ultricies mauris malesuada eget. Ut rhoncus efficitur arcu, ut molestie lacus cursus a.</p>
-        <h2>2021.10.18(WED) ~ 21(FRI)</h2>
+      <h1 class="title-h1 c-orange">"Hello! Sharing World"</h1>
+        <p class="title-span font-f-1">CREATIVE SOLUTIONS FOR ENGINEERS</p>
+        <p class="title-span font-f-1">2021</p>
+        <p class="description-section font-f-2 p-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper lectus a laoreet dictum. Maecenas molestie dolor arcu, quis ultricies mauris malesuada eget. Ut rhoncus efficitur arcu, ut molestie lacus cursus a.</p>
+        <h2 class="c-black font-f-1 date-title">2021.10.18(WED) ~ 21(FRI)</h2>
         <p>@ National Musem of Korea, Art Center nabi and more</p>
     </section>
 
