added style to program section in mobile version

--- a/main.html
+++ b/main.html
@@ -35,83 +35,68 @@
     </nav>
   </header>
 
-  <main class="container">
-    <section class="title-section">
+  <main class="">
+    <section class="title-section mb-5 ml-3 mr-3">
       <h1 class="title-h1 c-orange">"Hello! Sharing World"</h1>
-        <p class="title-span font-f-1">CREATIVE SOLUTIONS FOR ENGINEERS</p>
-        <p class="title-span font-f-1">2021</p>
+        <p class="title-span font-f-1">CREATIVE SOLUTIONS FOR ENGINEERS 2021</p>
         <p class="description-section font-f-2 p-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper lectus a laoreet dictum. Maecenas molestie dolor arcu, quis ultricies mauris malesuada eget. Ut rhoncus efficitur arcu, ut molestie lacus cursus a.</p>
         <h2 class="c-black font-f-1 date-title">2021.10.18(WED) ~ 21(FRI)</h2>
         <p>@ National Musem of Korea, Art Center nabi and more</p>
     </section>
 
-    <section class="main-section">
+    <section class="main-section bg-black mt-4 pt-5">
 
-      <h2>Main Program</h2>
+      <h2 class="c-white d-flex justify-content-center pb-1">Main Program</h2>
+      <div class="border-orange d-flex mx-auto mb-5"></div>
 
-      <div class="card">
-        <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
-        <div class="card-body">
-          <h4 class="card-title"></h4>
-          <p class="card-text"></p>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm-12">
+            <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
+            <div class="card-body bg-medium-opacity">
+              <h4 class="c-orange titles-program">Lecure</h4>
+              <p class="card-text c-white">Listen to the speakers from various countries about the messenges of sharing and opening</p>
+            </div>
+          </div>
+
+          <div class="col-sm-12">
+            <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
+            <div class="card-body bg-medium-opacity">
+              <h4 class="titles-program c-orange">CC Exhibition</h4>
+              <p class="card-text c-white">Listen to the speakers from various countries about the messenges of sharing and opening</p>
+            </div>
+          </div>
+
+          <div class="col-sm-12">
+            <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
+            <div class="card-body bg-medium-opacity">
+              <h4 class="titles-program c-orange">Forum</h4>
+              <p class="card-text c-white">Listen to the speakers from various countries about the messenges of sharing and opening</p>
+            </div>
+          </div>
+
+          <div class="col-sm-12">
+            <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
+            <div class="card-body bg-medium-opacity">
+              <h4 class="titles-program c-orange">Workshop</h4>
+              <p class="card-text c-white">Listen to the speakers from various countries about the messenges of sharing and opening</p>
+            </div>
+          </div>
+        </div>  
+
+        <div class="row">
+          <div class="col-sm-12">
+            <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
+            <div class="card-body bg-medium-opacity">
+              <h4 class="titles-program c-orange">CC Ignite</h4>
+              <p class="card-text c-white">Listen to the speakers from various countries about the messenges of sharing and opening</p>
+            </div>
+          </div>
+
         </div>
       </div>
 
-      <div class="card">
-        <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
-        <div class="card-body">
-          <h4 class="card-title"></h4>
-          <p class="card-text"></p>
-        </div>
-      </div>
-
-      <div class="card">
-        <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
-        <div class="card-body">
-          <h4 class="card-title"></h4>
-          <p class="card-text"></p>
-        </div>
-      </div>
-
-      <div class="card">
-        <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
-        <div class="card-body">
-          <h4 class="card-title"></h4>
-          <p class="card-text"></p>
-        </div>
-      </div>
-
-      <div class="card">
-        <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
-        <div class="card-body">
-          <h4 class="card-title"></h4>
-          <p class="card-text"></p>
-        </div>
-      </div>
-
-      <div class="card">
-        <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
-        <div class="card-body">
-          <h4 class="card-title"></h4>
-          <p class="card-text"></p>
-        </div>
-      </div>
-
-      <div class="card">
-        <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
-        <div class="card-body">
-          <h4 class="card-title"></h4>
-          <p class="card-text"></p>
-        </div>
-      </div>
-
-      <div class="card">
-        <img class="card-img-top" src="https://unsplash.it/172/81" alt="card-img-top-1">
-        <div class="card-body">
-          <h4 class="card-title"></h4>
-          <p class="card-text"></p>
-        </div>
-      </div>
+      <button type="submit" class="c-white bg-orange border-0 d-flex mx-auto mt-4 p-4 button-program">Join CC Global Summit 2021</button>
       
       <h3>SEE THE WHOLE Program</h3>
     </section>
