added style to speakers section in mobile version

--- a/main.html
+++ b/main.html
@@ -101,67 +101,67 @@
       <h3>SEE THE WHOLE Program</h3>
     </section>
 
-    <section class="feature-section">
+    <section class="feature-section container-fluid">
 
-      <h2>Feature Speakers</h2>
-      <div></div>
+      <h2 class="d-flex justify-content-center pb-1">Feature Speakers</h2>
+      <div class="border-orange d-flex mx-auto mb-5"></div>
 
       <article class="media ">
-        <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+        <img class="img-fluid w-25 mr-2" src="images/andrea.jpg" alt="speaker-1">
         <div class="media-body">
-          <a class="" href="#">Yochai Benkler</a>
-          <p>Pellentesque faucibus sem ac fermentum tristique</p>
-          <div></div>
+          <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
+          <p class="font-orange-p c-orange">Pellentesque faucibus sem ac fermentum tristique</p>
+          <div class="border-gray mb-4"></div>
           <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
         </div>
       </article>
 
       <article class="media ">
-        <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+        <img class="img-fluid w-25 mr-2" src="images/profile-1.jpg" alt="speaker-1">
         <div class="media-body">
-          <a class="" href="#">Yochai Benkler</a>
-          <p>Pellentesque faucibus sem ac fermentum tristique</p>
-          <div></div>
+          <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
+          <p class="font-orange-p c-orange">Pellentesque faucibus sem ac fermentum tristique</p>
+          <div class="border-gray mb-4"></div>
           <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
         </div>
       </article>
 
       <article class="media ">
-        <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+        <img class="img-fluid w-25 mr-2" src="images/profile-2.jpg" alt="speaker-1">
         <div class="media-body">
-          <a class="" href="#">Yochai Benkler</a>
-          <p>Pellentesque faucibus sem ac fermentum tristique</p>
-          <div></div>
+          <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
+          <p class="font-orange-p c-orange">Pellentesque faucibus sem ac fermentum tristique</p>
+          <div class="border-gray mb-4"></div>
           <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
         </div>
       </article>
 
       <article class="media ">
-        <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+        <img class="img-fluid w-25 mr-2" src="images/profile-3.jpg" alt="speaker-1">
         <div class="media-body">
-          <a class="" href="#">Yochai Benkler</a>
-          <p>Pellentesque faucibus sem ac fermentum tristique</p>
-          <div></div>
+          <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
+          <p class="font-orange-p c-orange">Pellentesque faucibus sem ac fermentum tristique</p>
+          <div class="border-gray mb-4"></div>
           <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
         </div>
       </article>
 
       <article class="media ">
-        <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+        <img class="img-fluid w-25 mr-2" src="images/profile-4.jpg" alt="speaker-1">
         <div class="media-body">
-          <a class="" href="#">Yochai Benkler</a>
-          <p>Pellentesque faucibus sem ac fermentum tristique</p>
-          <div></div>
+          <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
+          <p class="font-orange-p c-orange">Pellentesque faucibus sem ac fermentum tristique</p>
+          <div class="border-gray mb-4"></div>
           <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
         </div>
       </article>
 
       <article class="media ">
-        <img src="images/httpls://unsplash.it/50/50" alt="speaker-1">
+        <img class="img-fluid w-25 mr-2" src="images/sergio-de-paula.jpg" alt="speaker-1">
         <div class="media-body">
-          <a class="" href="#">Yochai Benkler</a>
-          <p>Pellentesque faucibus sem ac fermentum tristique</p>
-          <div></div>
+          <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
+          <p class="font-orange-p c-orange">Pellentesque faucibus sem ac fermentum tristique</p>
+          <div class="border-gray mb-4"></div>
           <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
         </div>
       </article>
