--- a/main.html
+++ b/main.html
@@ -193,10 +193,10 @@
 
   </main>
 
-  <footer>
-    <img class="w-25" src="images/logo-event.png" alt="event-logo">
+  <footer class="d-flex container-fluid justify-content-between">
+    <img class="w-50 h-50 mr-2" src="images/logo-event.png" alt="event-logo">
     <div>
-      <p>2021 Creative Common Korea. Rights Reserved</p>
+      <p>2021 Creative Common Korea. Rights Reserved.</p>
       <p>Fusce venenatis sit amet lorem non condimentum. Aliquam erat volutpat. Maecenas vehicula, eros sed mollis varius, nisl ex pellentesque tortor, eu sodales turpis neque in quam.</p>
     </div>
   </footer>
