fixed some issues in main section

--- a/main.html
+++ b/main.html
@@ -38,10 +38,10 @@
   <main class="">
     <section class="title-section mb-5 ml-3 mr-3">
       <h1 class="title-h1 c-orange">"Hello! Sharing World"</h1>
-        <p class="title-span font-f-1">CREATIVE SOLUTIONS FOR ENGINEERS 2021</p>
+        <p class="title-span font-f-1 c-orange pt-2 pb-2">CREATIVE SOLUTIONS FOR ENGINEERS 2021</p>
         <p class="description-section font-f-2 p-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ullamcorper lectus a laoreet dictum. Maecenas molestie dolor arcu, quis ultricies mauris malesuada eget. Ut rhoncus efficitur arcu, ut molestie lacus cursus a.</p>
-        <h2 class="c-black font-f-1 date-title">2021.10.18(WED) ~ 21(FRI)</h2>
-        <p>@ National Musem of Korea, Art Center nabi and more</p>
+        <h2 class="c-black font-f-1 date-title pt-2 pb-2">2021.10.18(WED) ~ 21(FRI)</h2>
+        <p>@ National Musem of Korea, Art Center Nabi and more</p>
     </section>
 
     <section class="main-section bg-black mt-4 pt-5 pb-4 mb-5">
@@ -112,7 +112,7 @@
         <div class="media-body">
           <a class="text-decoration-none c-black name-speaker" href="#">Yochai Benkler</a>
           <p class="font-orange-p c-orange">Pellentesque faucibus sem ac fermentum tristique</p>
-          <div class="border-gray mb-4"></div>
+          <div class="border-gray mb-4 d-flex"></div>
           <p class="">Proin tincidunt risus ut aliquam aliquam. Maecenas blandit vulputate consequat. Etiam ultricies lacinia ipsum, in auctor lacus pulvinar ac.</p>
         </div>
       </article>
